# Iris-Flower-Prediction

./: .gitignore  Main.py  README.md  app.py  pyproject.toml  requirements.txt  verify.py
.streamlit/: config.toml
src/: model.py  ui.py  utils.py
styles/: main.css
